# FlappyDuck

./: CMakeLists.txt  collision.h  counter.h  duck.h  main.cpp  particle.h  pipe.h  readme.md  settings.h
